--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body{
 	width:450px;
 	margin-top:70px;
 	display:inline-block;
+	text-align:center;
 }
 form{
 	display:flex;
@@ -36,9 +37,17 @@ button{
 a{
 	text-decoration:none;
 	color:#1877f2;
+	margin:auto;
+}
+div{
+	width:100%;
+	height:1px;
+	background-color:black;
+	margin:auto;
 }
 .signup{
 	background-color:#42b72a;
 	color:white;
-	margin-top:10px;
+	width:180px;
+	margin:auto;
 }
